--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="format-detection" content="telephone=no">
     <title>HTML Academy: Глейси</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style_minified.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <script src="js/js.js"></script>
   </head>
 
   <body class="background background-1">
@@ -237,7 +239,7 @@
   	<footer class="container main-footer">
   		<div class="footer-social">
   			<ul class="social-list">
-  				<li><a class="social-button" href="#">
+  				<li><a class="social-button" href="#" aria-label="Мы в Twitter">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
               <path fill="#FFFFFF" d="M16,0C7.164,0,0,7.164,0,16c0,8.837,7.164,16,16,16c8.837,0,16-7.163,16-16C32,7.164,24.837,0,16,0z
               M23.944,12.809c-0.251,6.516-3.463,10.832-10.992,10.702c-0.14,0-0.205,0-0.233,0c-0.015,0-0.021,0-0.021,0
@@ -248,7 +250,7 @@
               c-0.004,0.833-0.569,1.463-0.935,1.709c0.747,0.165,1.423-0.475,1.423-0.475C25.467,11.818,24.557,12.58,23.944,12.809z"/>
             </svg>    
           </a></li>
-  				<li><a class="social-button" href="#">
+  				<li><a class="social-button" href="#" aria-label="Мы в Instagram">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
               <path fill="#FFFFFF" d="M20.916,16c0,2.728-2.211,4.938-4.938,4.938S11.039,18.728,11.039,16c0-0.394,0.051-0.773,0.138-1.14
@@ -261,14 +263,14 @@
               h11.396c1.254,0,2.279,1.026,2.279,2.279V21.698z"/>
             </svg>    
           </a></li>
-  				<li><a class="social-button" href="#">
+  				<li><a class="social-button" href="#" aria-label="Мы в Facebook">
             <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
               <path fill="#FFFFFF" d="M16,0C7.164,0,0,7.163,0,16s7.164,16,16,16c8.837,0,16-7.164,16-16S24.837,0,16,0z M20.062,9.455h-3.021
               v3.444h3.021v3.445h-3.021v8.61h-3.021v-8.61H11v-3.445h3.021V9.455c0-1.902,1.353-3.445,3.021-3.445h3.021V9.455z"/>
             </svg>
           </a></li>
-  				<li><a class="social-button" href="#">
+  				<li><a class="social-button" href="#" aria-label="Мы в VK">
             <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
               <path fill="#FFFFFF" d="M16.637,14.495c0.402-0.019,0.719-0.082,0.951-0.188c0.326-0.145,0.54-0.33,0.641-0.559
@@ -318,6 +320,7 @@
 
     <div class="modal-overlay"></div>
 
+<!--
     <script>
       var link = document.querySelector(".map-adress .button");
       var popup = document.querySelector(".modal");
@@ -372,4 +375,5 @@
       });
 
     </script>
+  -->
 </html>
